--- a/cfn-templates/dh-openvpn-cfn.ec2-priv.yaml
+++ b/cfn-templates/dh-openvpn-cfn.ec2-priv.yaml
@@ -16,6 +16,18 @@ Metadata: {}
 Parameters:
 #===========================================
 
+#--- The Project Name
+#-------------------------------------------
+  ProjectName:
+    Description: Name of this Openvpn project.
+    ConstraintDescription: Specify name of the project.
+    Type: String
+    Default: "dh-openvpn"
+    MinLength: 3
+    MaxLength: 63
+    AllowedPattern: (?!^(\d{1,3}\.){3}\d{1,3}$)(^[a-z0-9]([a-z0-9-]*(\.[a-z0-9])?)*$(?<!\-))
+#    AllowedPattern: ^([0-9a-z.-])$
+
 #--- AMI for EC2 instance
 #-------------------------------------------
   PrivateAmiId:
@@ -217,7 +229,15 @@ Resources:
             yum:
               fail2ban: []
           sources:
-            /tmp: "https://dh-scripts.s3.eu-central-1.amazonaws.com/ssh/dh.cfn.openvpn-ec2-harden-ssh.sh.tar.gz"
+            /tmp:
+              !Join
+                - ""
+                - - "https://"
+                  - !Ref ProjectName
+                  - ".s3."
+                  - !Ref "AWS::Region"
+                  - ".amazonaws.com/"
+                  - "ssh/dh.cfn.openvpn-ec2-harden-ssh.sh.tar.gz"
           files:
             "/etc/fail2ban/jail.local":
               content: |
@@ -264,7 +284,15 @@ Resources:
             yum:
               iptables-services: []
           sources:
-            /tmp: "https://dh-scripts.s3.eu-central-1.amazonaws.com/iptables/dh.cfn.openvpn-ec2-priv-iptables.sh.tar.gz"
+            /tmp:
+              !Join
+                - ""
+                - - "https://"
+                  - !Ref ProjectName
+                  - ".s3."
+                  - !Ref "AWS::Region"
+                  - ".amazonaws.com/"
+                  - "iptables/dh.cfn.openvpn-ec2-priv-iptables.sh.tar.gz"
           files:
             "/etc/sysctl.d/30-dh.iptables.conf":
               content: |
@@ -360,7 +388,15 @@ Resources:
               owner: root
               group: root
           sources:
-            /tmp/sign-reqs: "https://dh-scripts.s3.eu-central-1.amazonaws.com/easyrsa/openvpn/sign-reqs/dh.easyrsa.openvpn.sign-reqs.tar.gz"
+            /tmp/sign-reqs:
+              !Join
+                - ""
+                - - "https://"
+                  - !Ref ProjectName
+                  - ".s3."
+                  - !Ref "AWS::Region"
+                  - ".amazonaws.com/"
+                  - "easy-rsa/sign-reqs/dh.easyrsa.openvpn.sign-reqs.tar.gz"
           commands:
             1a_initPKI:
               command: "cp -r /usr/share/easy-rsa/3/* /usr/local/easy-rsa/"
@@ -373,7 +409,7 @@ Resources:
             2b_buildCA:
               cwd: "/usr/local/easy-rsa/pki"
               command: "cp ca.crt issued/"
-              #command: "tar -zcf - ca.crt | aws s3 cp - s3://dh-scripts/easyrsa/openvpn/dh.easyrsa.ca.crt.tar.gz"
+              #command: "tar -zcf - ca.crt | aws s3 cp - s3://dh-scripts/easy-rsa/dh.easyrsa.ca.crt.tar.gz"
             3_importReqs:
               cwd: "/usr/local/easy-rsa"
               command: "for REQUEST in /tmp/sign-reqs/*; do ./easyrsa import-req $REQUEST $(basename $REQUEST .req); done"
@@ -382,12 +418,12 @@ Resources:
               command: "for REQUEST in /usr/local/easy-rsa/pki/reqs/*; do EntityName=$(basename $REQUEST .req); ./easyrsa sign-req ${EntityName##*.} $EntityName; done"
             4b_signReqs_1:
               cwd: "/usr/local/easy-rsa/pki/issued"
-              command: "tar -czf - ca.crt *.server.crt | aws s3 cp - s3://dh-scripts/easyrsa/openvpn/issued-certs/dh.easyrsa.openvpn.issued-certs.server.tar.gz"
-#              command: 'tar --transform "s/.*\///g" -zcf - ca.crt issued/*.server.crt | aws s3 cp - s3://dh-scripts/easyrsa/openvpn/issued-certs/dh.easyrsa.openvpn.issued-certs.server.tar.gz'
+              command: "tar -czf - ca.crt *.server.crt | aws s3 cp - s3://dh-scripts/easy-rsa/issued-certs/dh.easyrsa.openvpn.issued-certs.server.tar.gz"
+#              command: 'tar --transform "s/.*\///g" -zcf - ca.crt issued/*.server.crt | aws s3 cp - s3://dh-scripts/easy-rsa/issued-certs/dh.easyrsa.openvpn.issued-certs.server.tar.gz'
             4b_signReqs_2:
               cwd: "/usr/local/easy-rsa/pki/issued"
-              command: "tar -czf - ca.crt *.client.crt | aws s3 cp - s3://dh-scripts/easyrsa/openvpn/issued-certs/dh.easyrsa.openvpn.issued-certs.client.tar.gz"
-#              command: 'tar --transform "s/.*\///g" -zcf - ca.crt issued/*.client.crt | aws s3 cp - s3://dh-scripts/easyrsa/openvpn/issued-certs/dh.easyrsa.openvpn.issued-certs.client.tar.gz'
+              command: "tar -czf - ca.crt *.client.crt | aws s3 cp - s3://dh-scripts/easy-rsa/issued-certs/dh.easyrsa.openvpn.issued-certs.client.tar.gz"
+#              command: 'tar --transform "s/.*\///g" -zcf - ca.crt issued/*.client.crt | aws s3 cp - s3://dh-scripts/easy-rsa/issued-certs/dh.easyrsa.openvpn.issued-certs.client.tar.gz'
 
 
 #,,,,,,,,,,,,,,,,,,,,,,,,,,,,
